intTests/test_parse_errors/lexer006.log.good
 Loading file "lexer006.saw"
 Parse error at lexer006.saw:12:1-12:2: Unexpected `+'
FAILED
